2019-10-30  Jakub Jelinek  <jakub@redhat.com>

	* cp-tree.h (omp_declare_variant_finalize, build_local_temp): Declare.
	* decl.c: Include omp-general.h.
	(declare_simd_adjust_this): Add forward declaration.
	(omp_declare_variant_finalize_one, omp_declare_variant_finalize): New
	function.
	(cp_finish_decl, finish_function): Call omp_declare_variant_finalize.
	* parser.c (cp_finish_omp_declare_variant): Adjust parsing of the
	variant id-expression and propagate enough information to
	omp_declare_variant_finalize_one in the attribute so that it can
	finalize it.
	* class.c (finish_struct): Call omp_declare_variant_finalize.
	* tree.c (build_local_temp): No longer static, remove forward
	declaration.

2019-10-30  Paolo Carlini  <paolo.carlini@oracle.com>

	* typeck.c (cp_build_modify_expr): Prefer error + inform to
	error + error in one place.
	(get_delta_difference_1): Likewise.
	(get_delta_difference): Likewise, in two places.

2019-10-29  Paolo Carlini  <paolo.carlini@oracle.com>

	* typeck.c (build_x_unary_op): Use the location_t argument in
	three error_at.

2019-10-29  Marek Polacek  <polacek@redhat.com>

	PR c++/90998 - ICE with copy elision in init by ctor and -Wconversion.
	* call.c (joust): Don't attempt to warn if ->second_conv is null.

2019-10-29  Jakub Jelinek  <jakub@redhat.com>

	PR c++/92201
	* cp-gimplify.c (cp_gimplify_expr): If gimplify_to_rvalue changes the
	function pointer type, re-add cast to the original one.

2019-10-29  Marek Polacek  <polacek@redhat.com>

	PR c++/91548 - fix detecting modifying const objects for ARRAY_REF.
	* constexpr.c (cxx_eval_store_expression): Don't call
	modifying_const_object_p for ARRAY_REF.

2019-10-29  Richard Sandiford  <richard.sandiford@arm.com>

	* cp-objcp-common.h (cxx_simulate_enum_decl): Declare.
	(LANG_HOOKS_SIMULATE_ENUM_DECL): Define to the above.
	* decl.c (cxx_simulate_enum_decl): New function.

2019-10-29  Richard Sandiford  <richard.sandiford@arm.com>
