@@ -1,3 +1,8 @@
+2019-10-30  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/92134 - constinit malfunction in static data member.
+	* g++.dg/cpp2a/constinit14.C: New test.
+
 2019-10-30  Jozef Lawrynowicz  <jozef.l@mittosystems.com>
 
 	* gcc.target/msp430/mlarge-use-430-insn.c: New test.
